--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <body>
     <div id="drag-container">
       <div id="spin-container">
-        <img src="https://i.imgur.com/4PTul8E.jpeg" alt="" />
-        <img src="https://i.imgur.com/4PTul8E.jpeg" alt="" />
-        <img src="https://i.imgur.com/4PTul8E.jpeg" alt="" />
-        <img src="https://i.imgur.com/4PTul8E.jpeg" alt="" />
-        <img src="https://i.imgur.com/4PTul8E.jpeg" alt="" />
-        <img src="https://i.imgur.com/4PTul8E.jpeg" alt="" />
-        <img src="https://i.imgur.com/4PTul8E.jpeg" alt="" />
-        <img src="https://i.imgur.com/4PTul8E.jpeg" alt="" />
+        <img src="https://i.ibb.co/DgKZyZYj/z6388231685295-1618b81e5dacbe53f7e6259ea2cda371.jpg" alt="" />
+        <img src="https://i.ibb.co/DgKZyZYj/z6388231685295-1618b81e5dacbe53f7e6259ea2cda371.jpg" alt="" />
+        <img src="https://i.ibb.co/DgKZyZYj/z6388231685295-1618b81e5dacbe53f7e6259ea2cda371.jpg" alt="" />
+        <img src="https://i.ibb.co/DgKZyZYj/z6388231685295-1618b81e5dacbe53f7e6259ea2cda371.jpg" alt="" />
+        <img src="https://i.ibb.co/DgKZyZYj/z6388231685295-1618b81e5dacbe53f7e6259ea2cda371.jpg" alt="" />
+        <img src="https://i.ibb.co/DgKZyZYj/z6388231685295-1618b81e5dacbe53f7e6259ea2cda371.jpg" alt="" />
+        <img src="https://i.ibb.co/DgKZyZYj/z6388231685295-1618b81e5dacbe53f7e6259ea2cda371.jpg" alt="" />
+        <img src="https://i.ibb.co/DgKZyZYj/z6388231685295-1618b81e5dacbe53f7e6259ea2cda371.jpg" alt="" />
 
         <p>Linh Xing</p>
       </div>
