--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Linh Xing</title>
+    <title>Minh Ánh</title>
     <link rel="shortcut icon" href="./icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,7 +27,7 @@
         <img src="https://i.ibb.co/DgKZyZYj/z6388231685295-1618b81e5dacbe53f7e6259ea2cda371.jpg" alt="" />
         <img src="https://i.ibb.co/DgKZyZYj/z6388231685295-1618b81e5dacbe53f7e6259ea2cda371.jpg" alt="" />
 
-        <p>Linh Xing</p>
+        <p>Minh Ánh</p>
       </div>
       <div id="ground"></div>
     </div>
